@@ -9,8 +9,12 @@ plugins {
 group 'com.mcreater'
 version '1.0-SNAPSHOT'
 
+sourceCompatibility = "1.9"
+targetCompatibility = "1.9"
+
 application {
     mainClass = 'com.mcreater.fluentdemo.Main'
+    applicationDefaultJvmArgs = [ "--add-opens", "java.base/java.lang=ALL-UNNAMED"]
 }
 
 repositories {
